noinst_LIBRARIES=lib_mrt.a
lib_mrt_a_SOURCES=base64.c  buffer.c   comm_func.c     factory.c      file_func.c  hashmap.c   logger.c    mem_pool.c  mysql_func.c      socket_func.c  strutil.c binmap.c  charset.c  event_center.c  file_buffer.c  hashdb.c     ini_func.c  minheap.c   process_center.c  string.c       xxtea.c
AUTOMAKE_OPTIONS=foreign
